Network & Internet Settings: Add option to switch off Captive portal check
 * Option added in Network & Internet Settings, which is equivalent to
   the adb shell command 'settings put global captive_portal_mode [1/0]'
 * Will be reset to default, if 'Reset network settings' is chosen (menu)
 * Warning dialog is shown, when captive portal check is switched off
 * Hidden under 'advanced'

Cherry-picked from lin16-microG repo and adapted to Q (e.g. androidx pref.)

Change-Id: Ibbffdb5f3930df74ca8b4ba93d451f7fad086989

--- a/res/xml/network_and_internet.xml
+++ b/res/xml/network_and_internet.xml
@@ -97,4 +97,10 @@
         android:positiveButtonText="@string/save"
         android:negativeButtonText="@android:string/cancel" />
 
+    <SwitchPreference
+        android:key="captive_portal_switch"
+        android:title="@string/captive_portal_switch_title"
+        android:summary="@string/captive_portal_switch_summary"
+        android:order="20" />
+
 </PreferenceScreen>
