--- a/res/values-de/cm_strings.xml
+++ b/res/values-de/cm_strings.xml
@@ -101,4 +101,6 @@
     <string name="connected_tws_device_saved_title">Gespeicherte Kopfhörer</string>
     <string name="heads_up_notifications_enabled_title">Pop-up</string>
     <string name="heads_up_notifications_enabled_summary">Wichtige Benachrichtigungen in einem kleinen, schwebenden Fenster anzeigen</string>
+    <string name="restore_hosts_switch_title">hosts Datei beim Update beibehalten</string>
+    <string name="restore_hosts_switch_summary">Sichern und Wiederherstellen der /etc/hosts Datei bei einem Update. Dieses ROM liefert eine regelmäßig aktualisierte hosts Datei mit vielen blockierten Werbe-/Malware-Seiten.\nDie Einstellung macht daher nur Sinn bei Verwendung einer Hosts-Editor-App.</string>
 </resources>
