--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -189,4 +189,8 @@
     <!-- Heads-up -->
     <string name="heads_up_notifications_enabled_title">Heads-up</string>
     <string name="heads_up_notifications_enabled_summary">Display priority notifications in a small floating window</string>
+
+    <!-- hosts backup/retore -->
+    <string name="restore_hosts_switch_title">Restore hosts file during update</string>
+    <string name="restore_hosts_switch_summary">If active, the /etc/hosts file is restored during an update. This ROM delivers a regularly updated hosts file with many blocked ad-/malware sites.\nThis setting therefore only makes sense, if you use a hosts editor app.</string>
 </resources>
