--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -206,4 +206,8 @@
     <string name="captive_portal_switch_title">Captive portal mode</string>
     <string name="captive_portal_switch_summary">Enable or disable the captive portal probing for connection attempts (default ON).\nA connection to the defined provider (default: GrapheneOS) is established at every WiFi authentication.</string>
     <string name="captive_portal_switch_warning">If you switch off the captive portal, you will not receive connectivity informations any longer. Really switch off?</string>
+
+    <!-- Backup Transport selection settings menu and activity title -->
+    <string name="backup_transport_setting_label">Change backup provider</string>
+    <string name="backup_transport_title">Select backup provider</string>
 </resources>
