Settings: create z_iptables service and iptables block script [2/3]
Create new preference item in preference fragment of Network settings
to trigger z_iptables service for the iptables block script

Reset Networks: Also reset iptables block script option

Cherry-picked from lin16-microG and adapted to Q

Change-Id: I1f5563df217059100baa58a143c1ad2179cb368f

--- a/res/xml/network_and_internet.xml
+++ b/res/xml/network_and_internet.xml
@@ -103,4 +103,10 @@
         android:summary="@string/captive_portal_switch_summary"
         android:order="20" />
 
+    <SwitchPreference
+        android:key="ziptables_block_switch"
+        android:title="@string/ziptables_block_switch_title"
+        android:summary="@string/ziptables_block_switch_summary"
+        android:order="25" />
+
 </PreferenceScreen>
