--- a/res/values-de/cm_strings.xml
+++ b/res/values-de/cm_strings.xml
@@ -111,4 +111,6 @@
     <string name="captive_portal_switch_title">Captive Portal Erkennung</string>
     <string name="captive_portal_switch_summary">Ein-/Ausschalten der Captive Portal Erkennung (Vorgabe EIN).\nHierbei wird bei jeder WLAN Anmeldung eine Verbindung zum definierten Dienst(Vorgabe: GrapheneOS) aufgebaut.</string>
     <string name="captive_portal_switch_warning">Nach dem Ausschalten der Captive-Portal-Erkennung empfangen Sie keine Verbindungs-Rückmeldung mehr. Wirklich fortfahren?</string>
+    <string name="ziptables_block_switch_title">Iptables Block-Skript anwenden</string>
+    <string name="ziptables_block_switch_summary">Blockiert den gesamten Facebook IP-Adressraum für alle Apps and den gesamten Google IP-Adressraum für die meisten Apps (ausgewählte Apps in Ausnahmeliste)</string>
 </resources>
