--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -202,4 +202,9 @@
     <!-- Backup Transport selection settings menu and activity title -->
     <string name="backup_transport_setting_label">Change backup provider</string>
     <string name="backup_transport_title">Select backup provider</string>
+
+    <!-- Iptables Block-script -->
+    <string name="ziptables_block_switch_title">Apply iptables block script</string>
+    <string name="ziptables_block_switch_summary">Block entire Facebook IP range for all apps and block entire Google IP range for most apps (specific apps on exception list)</string>
+
 </resources>
