--- a/res/xml/network_and_internet_v2.xml
+++ b/res/xml/network_and_internet_v2.xml
@@ -113,4 +113,10 @@
         android:summary="@string/captive_portal_switch_summary"
         android:order="25" />
 
+    <SwitchPreference
+        android:key="ziptables_block_switch"
+        android:title="@string/ziptables_block_switch_title"
+        android:summary="@string/ziptables_block_switch_summary"
+        android:order="30" />
+
 </PreferenceScreen>
