Network settings: List preference to choose Captive portal detection provider
Offer the option to choose a 'provider' for the Captive portal probe request.
Default is GrapheneOS (staically overlaid in vendor/lineage), further options
are: Google, Ubuntu and openSUSE - this is implemented via runtime resource
overlays (RRO) - see packages/overlay/CaptivePortal204

Inlcude also option to deactivate the respective RROs when resetting network.

Change-Id: I6e8244b32495d2a26c8270cebf9392c4cf0161d0

--- a/res/values/cm_arrays.xml
+++ b/res/values/cm_arrays.xml
@@ -45,4 +45,19 @@
         <item>@string/security_settings_fingerprint_sensor_location_left</item>
         <item>@string/security_settings_fingerprint_sensor_location_right</item>
     </string-array>
+
+    <!-- Captive Portal URLs -->
+    <string-array name="captive_portal_url_entries" translatable="false">
+        <item>GrapheneOS (default)</item>
+        <item>openSUSE</item>
+        <item>Ubuntu</item>
+        <item>Google</item>
+    </string-array>
+
+    <string-array name="captive_portal_url_values" translatable="false">
+        <item>GrapheneOS</item>
+        <item>openSUSE</item>
+        <item>Ubuntu</item>
+        <item>Google</item>
+    </string-array>
 </resources>
