--- a/res/xml/network_and_internet_v2.xml
+++ b/res/xml/network_and_internet_v2.xml
@@ -113,6 +113,16 @@
         android:summary="@string/captive_portal_switch_summary"
         android:order="25" />
 
+    <ListPreference
+        android:key="captive_portal_url"
+        android:dependency="captive_portal_switch"
+        android:defaultValue="GrapheneOS"
+        android:entries="@array/captive_portal_url_entries"
+        android:entryValues="@array/captive_portal_url_values"
+        android:summary="@string/captive_portal_url_summary"
+        android:title="@string/captive_portal_url_title"
+        android:order="27" />
+
     <SwitchPreference
         android:key="ziptables_block_switch"
         android:title="@string/ziptables_block_switch_title"
